k8s/task-app.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: task-api
spec:
  replicas: 1
  selector:
    matchLabels:
      run: task-api
  template:
    metadata:
      labels:
        run: task-api
    spec:
      containers:
        - name: task-api
          image: microservicesdemolyon/task-api
          ports:
            - containerPort: 4200
              protocol: TCP
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      run: frontend
  template:
    metadata:
      labels:
        run: frontend
    spec:
      containers:
        - name: frontend
          image: microservicesdemolyon/frontend
          ports:
            - containerPort: 4300
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: task-api
  labels:
    run: task-api
spec:
  ports:
  - port: 80
    targetPort: 4200
    protocol: TCP
  selector:
    run: task-api
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    run: frontend
spec:
  ports:
  - port: 80
    targetPort: 4300
    protocol: TCP
  selector:
    run: frontend
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: task-api
spec:
  rules:
    - host: tasks-gr01.k8s.me
      http:
        paths:
          - backend:
              serviceName: task-api
              servicePort: 80
            path: /api
          - backend:
              serviceName: frontend
              servicePort: 80
            path: /
